--- a/src/content/posts/1.md
+++ b/src/content/posts/1.md
@@ -1,7 +1,7 @@
 ---
 title: 现代化终端管理工具 XTerminal
 published: 2025-12-01
-description: XTerminal 是一款现代化跨平台终端管理工具，专为需要多台服务器的开发者、运维工程师和系统管理员设计。
+description: 这是一款现代化跨平台终端管理工具，专为需要多台服务器的开发者、运维工程师和系统管理员设计。
 tags: [XTerminal]
 category: 绿色软件
 draft: false
